tests/ui/transmute-mut-src-unsized.nightly.stderr
error[E0463]: can't find crate for `zerocopy`
 --> $DIR/transmute-mut-src-unsized.rs:9:5
  |
9 | use zerocopy::transmute_mut;
  |     ^^^^^^^^ can't find crate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0463`.
